Fix: relative path for working on Github Pages.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon-180x180.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="stylesheet" href="css/style.css">
 
     <script type="text/javascript" charset="utf-8" src="js/jscl.js"></script>
     <!-- <script type="text/javascript" charset="utf-8" src="js/iiiika.js"></script> -->
@@ -18,16 +18,16 @@
   <body>
     <div id="container">
       <div id="banner">
-        <img id="banner-background" src="/img/banner/1.png">
+        <img id="banner-background" src="img/banner/1.png">
         <div id="name" class="clickable">CLICK ME</div>
         <div id="byname">
           <div id="byname-adj"  class="clickable"></div>
           <div id="byname-noun" class="clickable"></div>
         </div>
         <div id="badge">
-          <img id="badge-1" class="clickable" src="/img/badge/Badge_Fest10xBattle_Join_Lv00.png">
-          <img id="badge-2" class="clickable" src="/img/badge/Badge_Fest10xBattle_Join_Lv01.png">
-          <img id="badge-3" class="clickable" src="/img/badge/Badge_Fest10xBattle_Join_Lv02.png">
+          <img id="badge-1" class="clickable" src="img/badge/Badge_Fest10xBattle_Join_Lv00.png">
+          <img id="badge-2" class="clickable" src="img/badge/Badge_Fest10xBattle_Join_Lv01.png">
+          <img id="badge-3" class="clickable" src="img/badge/Badge_Fest10xBattle_Join_Lv02.png">
         </div>
       </div>
     </div>
