Rewrite: the `lisp/core.lisp' for cleaner IIIIka logic.
I thought at first time the mapping and spliting rules
are fancy. But I was wrong. They should be the same.

Also, the `restart-case' usage is not support in JSCL,
which made the porting very hard. Just remove all of
them and rewrite the logic. The result is better.

I think I will add a user rule-editing functions later.
So that user should no need to wait until I made the
base rule table update.

Almost finished...

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="css/style.css">
 
     <script type="text/javascript" charset="utf-8" src="js/jscl.js"></script>
-    <!-- <script type="text/javascript" charset="utf-8" src="js/iiiika.js"></script> -->
-    <!-- <script type="text/javascript" charset="utf-8" src="js/iiiika-base.js"></script> -->
+
+    <script type="text/javascript" charset="utf-8" src="js/iiiika.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/iiiika-base.js"></script>
+
     <script type="text/javascript" charset="utf-8" src="js/iiiika-web.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/byname-cn-zh.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/translation-cn-zh.js"></script>
@@ -51,12 +53,13 @@
     <div id="byname-select" class="popup fade-out">
       <div id="byname-select-title"     class="popup-title">BYNAME</div>
       <div id="byname-select-message"   class="popup-content">CONTENT</div>
-      <ul id="byname-select-list"       class="popup-list"></ul>
+      <ul  id="byname-select-list"      class="popup-list"></ul>
       <div>
         <button id="byname-select-add"    class="popup-button">ADD</button>
         <button id="byname-select-cancel" class="popup-button">CANCEL</button>
       </div>
     </div>
+
     <div id="query" class="popup fade-out">
       <div   id="query-title"   class="popup-title"></div>
       <div   id="query-message" class="popup-content">Input:</div>
@@ -66,11 +69,13 @@
         <button id="query-confirm" class="popup-button">YES</button>
       </div>
     </div>
+
     <div id="alert" class="popup fade-out">
       <div id="alert-title" class="popup-title">ALERT</div>
       <div id="alert-content" class="popup-content">CONTENT</div>
       <button id="alert-button" class="popup-button">OK</button>
     </div>
+
     <script type="text/javascript" charset="utf-8" src="js/iiiika-main.js"></script>
   </body>
 </html>
