Update: direct IIIIka to Github.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         </span>
         <br>
         <span>
-          <a id="iiiika">IIIIka</a>, Copyright (c) 2025,
+          <a id="iiiika" href="https://github.com/li-yiyang/iiiika">IIIIka</a>,
+          Copyright (c) 2025,
           <a href="https://github.com/li-yiyang">凉凉</a>
         </span>
       </div>
