Update: preview and checks while input name.
TODO:
+ add user words select
+ add user rule define

--- a/index.html
+++ b/index.html
@@ -61,10 +61,20 @@
       </div>
     </div>
 
+    <div id="query-name" class="popup fade-out">
+      <div   id="query-name-title"   class="popup-content"></div>
+      <div   id="query-name-message" class="popup-title">Input:</div>
+      <input id="query-name-input"   class="popup-input" type="text">
+      <div>
+        <button id="query-name-cancel"  class="popup-button">CANCEL</button>
+        <button id="query-name-confirm" class="popup-button">YES</button>
+      </div>
+    </div>
+
     <div id="query" class="popup fade-out">
       <div   id="query-title"   class="popup-title"></div>
       <div   id="query-message" class="popup-content">Input:</div>
-      <input id="query-input"   type="text">
+      <input id="query-input"   class="popup-input" type="text">
       <div>
         <button id="query-cancel"  class="popup-button">CANCEL</button>
         <button id="query-confirm" class="popup-button">YES</button>
